Add missing endpoint update.
